# docker-python-fastapi-boilerplate

./: .gitignore  Dockerfile  README.md  pyproject.toml
.cursor/rules/: python-build.mdc  upon-change.mdc
.github/workflows/: ci.yml  release.yml
app/tests/: test_main.py
backend/: main.py  pyproject.toml
backend/tests/: test_main.py
