[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sherparr"
version = "0.0.1"
description = "A simple API with health and hello endpoints"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3,<8.0.0",
    "httpx>=0.24.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", ".."]

[tool.hatch.build.targets.wheel]
packages = ["app"]